
2010-November-21 Struan Robertson

    * BoltzmannDistribution.cpp: Move to plug-in area and consolidated
    with header file.
    
    * Remove duplicate i-propyl example.
    
    * SimpleRRKM: Added comments.

2010-November-21 Struan Robertson

    * MESMER.sln: Removed references to deleted header files.

2010-November-17 Chris Morley
	
	* Transferred the declarations of plugin classes to their .cpp
	files and deleted the .h files.
	
	* src/MicroRate.cpp, src/MicroRate.h: moved utility functions
	ReadRange() and ILTCheck from SimpleILT
	
	* Windows VC8: delete build files for Visual Studio 2005
	
	* Documentation/MESMER manual.doc: minor edits in XML section.		

2010-November-14 Struan Robertson

    * MESMER manual.doc/.pdf: Added documentation of XML data access methods.

2010-November-13 Struan Robertson

    * MESMER manual.doc/.pdf: Updated the documentation to reflect recent 
    changes to plugin classes.

2010-November-8 Chris Morley

	* src/main.cpp,src/System.cpp,src/System.h,mesmer1.xsl,mesmer2.xsl:
	Add <description> element so that less information gets put in
	XML comments.
	Revamp metadata to be more compliant with Dublin Core recommendations.
	http://dublincore.org/documents/dc-xml-guidelines/ 

	* examples/Ethyl_H_to_Ethane/Ethyl_H_to_Ethane.xml,
	MesmerQA/cyclopropene isomerization/Cyclopropene_isomerization_test.xml:
	make comment into <description>

	* src/oberror.h, src/plugins/fitting.cpp: Way of supressing
	 ctest output, not currently used

	* examples/DiagramTest: remove

2010-November-6 Chris Morley

	* src/MolecularComponents.cpp, src/MolecularComponents.h,
	src/plugins/HinderedRotorA.cpp: modify gStructure::GetAttachedAtoms()
	so that it works with molecules with rings.

2010-November-4 Struan Robertson

    * System.h/.ccp, fitting.h: Altered the signiture of the calculate method so
    as to control the amount of output.

2010-November-2 Struan Robertson
