@@ -50,6 +50,10 @@ MesmerQA/cyclopropene[!!-~]isomerization/baselines/Linux64/mesmer.test -text
 MesmerQA/cyclopropene[!!-~]isomerization/baselines/MacOSX/mesmer.test -text
 MesmerQA/cyclopropene[!!-~]isomerization/baselines/Win32/mesmer.log -text
 MesmerQA/cyclopropene[!!-~]isomerization/baselines/Win32/mesmer.test -text
+MesmerQA/i-propyl/baselines/Linux32/mesmer.log -text
+MesmerQA/i-propyl/baselines/Linux32/mesmer.test -text
+MesmerQA/i-propyl/baselines/Linux64/mesmer.log -text
+MesmerQA/i-propyl/baselines/Linux64/mesmer.test -text
 MesmerQA/i-propyl/baselines/Win32/mesmer.log -text
 MesmerQA/i-propyl/baselines/Win32/mesmer.test -text
 MesmerQA/i-propyl/ipropyl_test.xml -text
