@@ -1,0 +1,49 @@
+
+Parsing input xml file...
+ipropyl_test.xml
+
+In R1: Parsing reaction...
+In i-propyl: The default value of me:frequenciesScaleFactor was used.
+In i-propyl: Hindered rotor b1
+In i-propyl: Hindered rotor b2
+In i-propyl: The default value of me:DistributionCalcMethod was used.
+In i-propyl: The default value of me:energyTransferModel was used.
+In i-propyl: deltaEdown was given a range with 15 steps 
+In propene: No vibrational frequencies were assigned for propene, assuming it to be a sink term.
+ZPE was given a range with 401 steps 
+In propene: The default value of me:frequenciesScaleFactor was used.
+In propene: Hindered rotor b1
+In H: Cannot find argument me:vibFreqs. Assumes that it is an atom or atomic ion.
+In H: No rotational constants from <me:rotConsts> or structure.Assuming to be an atom or atomic ion.
+In H: The default value of me:symmetryNumber was used.
+In H: The default value of me:frequenciesScaleFactor was used.
+In H: The default value of spinMultiplicity was used.
+In H: The default value of me:DOSCMethod was used.
+In R1: No tunneling method was found for R1
+In R1: No crossing method was found for R1
+All molecules are on the same energy basis: arbitary
+The default value of me:precision was used.
+3e+17PPCC, 720K at double precision
+Write metadata 20101127_152726
+
+File: "ipropyl_test.xml" successfully parsed.
+Calculate EGME
+PT Grid 0
+Cell number = 18600, Grain number = 186
+Rotational constants were not defined but requested.
+Number of grains produced is not equal to that requested
+Number of grains requested: 186
+Number of grains produced : 0
+
+140 values in the FFT convolution routine were replaced by standard convolution
+Unimolecular ILT calculation completed
+Build Collison Operator -- Time elapsed: 0 seconds.
+Diagonalize the Reaction Operator -- Time elapsed: 1 seconds.
+In timeEvolution: No population was assigned, and there is no source term.
+In timeEvolution: Initialize a Boltzmann distribution in the first isomer.
+
+1 temperature/concentration-pressure points calculated.
+Finish Calculation -- Time elapsed: 0 seconds.
+ -- Total time elapsed: 2 seconds.
+
+System saved to out.xml
