@@ -1,0 +1,92 @@
+PT Grid 0 Condition: conc = 3e+17, temp = 720, diagonalization precision: double
+{
+
+Test rovibronic density of states for: i-propyl
+{
+      T           qtot           sumc           sumg
+    200        1006.33        1009.02        988.162
+    300        5163.27        5176.45        5127.72
+    400        20494.5        20545.4        20435.6
+    500        72336.1        72512.2        72263.3
+    600         238064         238636         238066
+    700         744035         745805         744495
+    800    2.2268e+006   2.23205e+006   2.22905e+006
+}
+
+Canonical rate coefficients for R1, calculated from microcanonical rates
+{
+    100   1.72093e-071
+    200   4.63841e-029
+    300   6.67962e-015
+    400   8.07436e-008
+    500     0.00141573
+    600       0.897829
+    700        80.1172
+    800        2006.45
+}
+
+Eq fraction matrix:
+{
+            1
+}
+inverse of Eq fraction matrix:
+{
+            1
+}
+Equilibrium Fraction for i-propyl = 1
+
+Total number of eigenvalues = 186
+Eigenvalues
+{
+ -6.438153e+006
+ -4.381069e+006
+ -2.768861e+006
+ -1.569575e+006
+ -4.581451e+001
+}
+
+Bartis Widom eigenvalue/eigenvector analysis
+
+Number of sinks in this system: 1
+
+There should be 1 chemically significant eigenvalues (CSEs)
+Y_matrix:
+{
+        4.581434e+01
+}
+
+Z_matrix: {
+9.999963e-01	
+}
+
+Z_matrix^(-1):
+{
+1.000004e+00	
+}
+
+Z_matrix * Z_matrix^(-1) [Identity matrix]:
+{
+1.000000e+00	
+}
+
+Kr matrix:
+{
+-4.581451e+01	
+}
+
+Kp matrix:
+{
+        4.581451e+01
+}
+
+First order & pseudo first order rate coefficients for loss rxns:
+{
+i-propyl loss = -4.581451e+01
+}
+
+First order & pseudo first order rate coefficients for irreversible rxns:
+{
+i-propyl -> propene+H = 4.581451e+01
+}
+
+}
