@@ -29,7 +29,7 @@ fi
 
 tfn=mesmer.test
 lfn=mesmer.log
-bline=baselines/MacOSX/
+bline=baselines/Linux32/
 outf=out.xml
 
 case $1 in
@@ -50,29 +50,29 @@ case $1 in
     echo "----------------------------------------------------------------------"
     ;;
   "")
-    echo "\r"
+    echo ""
     echo "----------------------------------------------------------------------"
     echo "This file execute mesmer executable on several quality assessment files."
     echo "There are two options to execute this file:"
-    echo "\r"
+    echo ""
     echo "1. user test mode; simply to confirm that if the files (mesmer.test) "
     echo "generated by current machine is identical to the mesmer baselines."
-    echo "\r"
+    echo ""
     echo "Syntax:"
-    echo "\r"
+    echo ""
     echo "    \MESMER_PATH\MesmerQA>./qashell.sh -u"
-    echo "\r"
+    echo ""
     echo "2. developer SVN test mode; it overwrites mesmer.test files in the baseline"
     echo "   folders, thus the developer can use SVN check for modifications from the "
     echo "   MesmerQA folder to see what files are changed and the detail of the "
     echo "   modifications. To use it in the developer mode simply give a -o directive"
     echo "   after QA command."
-    echo "\r"
+    echo ""
     echo "Syntax:"
-    echo "\r"
+    echo ""
     echo "    \MESMER_PATH\MesmerQA>./qashell.sh -o"
     echo "----------------------------------------------------------------------"
-    echo "\r"
+    echo ""
     ;;
 esac
 
